Change Java to 11